# LS-NTGF-All

./: .gitignore  CMakeLists.txt  CMakePresets.json  LS-NTGF-All-核心术语.md  PP-GCB-Experiments-CN.md  PP-GCB-Experiments-EN.md  README.md
docs/: 20260107_2308_PP-GCB-Experiments-EN.md  20260107_2321_PP-GCB-Experiments-CN.md  20260108_1921_LS-NTGF-All_数学模型与算法分析.md  20260108_2115_模型对齐修复报告.md  20260110_1147_RR算法跨期机制问题分析.md  LS-NTGF-All_数学模型与算法分析_20260108.md  RR算法跨期机制问题分析_20260109.md  模型对齐修复报告_20260108.md
src/: big_order.cpp  case_analysis.cpp  case_analysis.h  common.h  cplex_lot_sizing.cpp  input.cpp  logger.cpp  logger.h  main.cpp  optimizer.h  output.cpp  tee_stream.h
src/solvers/: pp_gcb_solver.cpp  rf_solver.cpp  rfo_solver.cpp  rr_solver.cpp
